Støtte deserialisert json